# gpt_telebot

./: .gitignore  README.md  main.py  models.py  pyproject.toml
classes/: base_dataclasses.py  open_ai.py  telegrambot.py
utils/: constants.py
